Make sure the relative checkbox is respected.

The relative check is initialized using the configured setting.

BUG:275988